--- a/Address_Book/Address_Book.csproj
+++ b/Address_Book/Address_Book.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="CoreProgramming">
       <HintPath>..\..\CoreProgramming\CoreProgramming\obj\Debug\netcoreapp3.1\CoreProgramming.dll</HintPath>
     </Reference>
